--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
-Michael Ndula <michaelndula@gmail.com>
+# This file lists all individuals having contributed content to the repository.
+
+Your Name <your@email.com>
+Your Partners Name <your@email.com>
