--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Your Name <your@email.com>
-Your Partners Name <your@email.com>
+Juan Daniel Lopez <1235@holbertonschool.com>
+Christian Campos <1566@holbertonschool.com>
